--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "postcss-load-config": "^4.0.1",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
+    "sveltekit-flash-message": "^2.2.0",
+    "sveltekit-superforms": "^1.6.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.0",
     "unplugin-icons": "^0.17.0",
-    "vite": "^4.4.2"
+    "vite": "^4.4.2",
+    "zod": "^3.22.2"
   },
   "type": "module",
   "dependencies": {
