--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@prisma/client": "^5.2.0",
     "bits-ui": "^0.5.6",
     "clsx": "^2.0.0",
+    "formsnap": "^0.0.9",
     "lucia": "^2.4.2",
     "lucide-svelte": "^0.274.0",
     "svelte-french-toast": "^1.2.0",
