--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@lucia-auth/oauth": "^3.0.0",
     "@prisma/client": "^5.2.0",
     "bits-ui": "^0.5.6",
+    "check-password-strength": "^2.0.7",
     "clsx": "^2.0.0",
     "formsnap": "^0.0.9",
     "lucia": "^2.4.2",
