--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
   },
   "type": "module",
   "dependencies": {
+    "@k4ung/svelte-otp": "^0.0.9",
     "@lucia-auth/adapter-prisma": "^3.0.1",
     "@lucia-auth/oauth": "^3.0.0",
     "@prisma/client": "^5.2.0",
-    "bits-ui": "^0.5.6",
+    "bits-ui": "^0.5.7",
     "check-password-strength": "^2.0.7",
     "clsx": "^2.0.0",
     "formsnap": "^0.0.9",
