--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
   },
   "devDependencies": {
+    "@beyonk/gdpr-cookie-consent-banner": "^10.2.1",
     "@iconify/json": "^2.2.110",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
