--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
   },
   "devDependencies": {
-    "@beyonk/gdpr-cookie-consent-banner": "^10.2.1",
     "@iconify/json": "^2.2.110",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
@@ -43,6 +42,7 @@
     "svelte-email": "^0.0.4",
     "svelte-french-toast": "^1.2.0",
     "tailwind-merge": "^1.14.0",
-    "tailwind-variants": "^0.1.14"
+    "tailwind-variants": "^0.1.14",
+    "vanilla-cookieconsent": "^2.9.2"
   }
 }
