--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lucia": "^2.4.2",
     "lucide-svelte": "^0.274.0",
     "nodemailer": "^6.9.5",
+    "resend": "^1.1.0",
     "svelte-email": "^0.0.4",
     "svelte-french-toast": "^1.2.0",
     "tailwind-merge": "^1.14.0",
