--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss-load-config": "^4.0.1",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
+    "svelte-motion": "^0.11.5",
     "sveltekit-flash-message": "^2.2.0",
     "sveltekit-superforms": "^1.6.1",
     "tailwindcss": "^3.3.2",
