tweaks on themeSwitch, dashboard design is set (overview & orders), profilePicture logic

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "postcss-load-config": "^4.0.1",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
+    "svelte-headless-table": "^0.17.5",
+    "svelte-time": "^0.8.0",
     "sveltekit-flash-message": "^2.2.0",
     "sveltekit-superforms": "^1.6.1",
     "tailwindcss": "^3.3.2",
@@ -29,12 +31,16 @@
   "type": "module",
   "dependencies": {
     "@k4ung/svelte-otp": "^0.0.9",
+    "@lemonsqueezy/lemonsqueezy.js": "^1.2.1",
     "@lucia-auth/adapter-prisma": "^3.0.1",
     "@lucia-auth/oauth": "^3.0.0",
     "@prisma/client": "^5.2.0",
     "bits-ui": "^0.5.7",
     "check-password-strength": "^2.0.7",
     "clsx": "^2.0.0",
+    "countup.js": "^2.8.0",
+    "d3-scale": "^4.0.2",
+    "dayjs": "^1.11.10",
     "formsnap": "^0.0.9",
     "lucia": "^2.4.2",
     "lucide-svelte": "^0.274.0",
@@ -42,7 +48,6 @@
     "resend": "^1.1.0",
     "svelte-email": "^0.0.4",
     "svelte-french-toast": "^1.2.0",
-    "svelte-motion": "^0.11.5",
     "tailwind-merge": "^1.14.0",
     "tailwind-variants": "^0.1.14",
     "vanilla-cookieconsent": "^2.9.2"
