--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "nodemailer": "^6.9.5",
     "resend": "^1.1.0",
     "svelte-email": "^0.0.4",
+    "svelte-file-dropzone": "^2.0.2",
     "svelte-french-toast": "^1.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwind-variants": "^0.1.14",
