Cloudflare R2 implemented for image uploads

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "type": "module",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.431.0",
+    "@aws-sdk/s3-request-presigner": "^3.431.0",
     "@k4ung/svelte-otp": "^0.0.9",
     "@lemonsqueezy/lemonsqueezy.js": "^1.2.1",
     "@lucia-auth/adapter-prisma": "^3.0.1",
