--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lucia": "^2.4.2",
     "lucide-svelte": "^0.274.0",
     "nodemailer": "^6.9.5",
+    "oslo": "^0.8.0",
     "resend": "^1.1.0",
     "svelte-email": "^0.0.4",
     "svelte-file-dropzone": "^2.0.2",
