--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "svelte-time": "^0.8.0",
     "sveltekit-flash-message": "^2.2.0",
     "sveltekit-superforms": "^1.6.1",
+    "sveltekit-view-transition": "^0.5.2",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.0",
     "unplugin-icons": "^0.17.0",
